--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aaa",
-  "version": "0.0.0",
+  "name": "ankitkumarsharma",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
