added portfolio and demo part dynamic

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
                 "input": "public"
               },
               "src/assets/img",
-              "src/assets/resume"
+              "src/assets/resume",
+              "src/assets/portfolio/angular/dynamic-forms-generation-v19/browser"
             ],
             "styles": [
               "src/styles.scss"
